--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/LAstudios.jpg" alt="">
+                    <img class="img-responsive" src="img/LAStudios.jpg" alt="">
                 </div>
             </div>
 
