--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
                     <a href="http://esimonian.github.io/js-spotify-api-ajax-v-000/" target="_blank"><h2 class="section-heading">Artists Top Tracks</h2></a>
-                    <p class="lead">Utilizes Spotify API </p>
+                    <p class="lead">Utilizes Spotify API and JS Charts </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
                     <img class="img-responsive" src="img/spotify_app_android.jpg" alt="">
@@ -151,7 +151,7 @@
                     <div class="clearfix"></div>
                     <a href="http://www.lastudiomaps.com/" target="_blank"><h2 class="section-heading">LA Studio Maps</h2></a>
                     <p class="lead">
-                      Detailed map of major studios in the LA area
+                      Detailed map of major studios in the LA area. Uses mapbox and will soon include directions. Android and IOS apps are currently in development. 
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
