added weather page

--- a/index.html
+++ b/index.html
@@ -96,6 +96,7 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
+
     <div class="content-section-a">
 
         <div class="container">
@@ -103,11 +104,11 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="http://esimonian.github.io/js-spotify-api-ajax-v-000/" target="_blank"><h2 class="section-heading">Artists Top Tracks</h2></a>
-                    <p class="lead">Utilizes Spotify API </p>
+                    <a href="http://esimonian.github.io/js-weather-api-ajax-v-000/" target="_blank"><h2 class="section-heading">Weather in New York</h2></a>
+                    <p class="lead">Uses Weather Underground API and updates hourly</p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/spotify_app_android.jpg" alt="">
+                    <img class="img-responsive" src="img/ny.jpg" alt="">
                 </div>
             </div>
 
@@ -120,18 +121,15 @@
     <div class="content-section-b">
 
         <div class="container">
-
             <div class="row">
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="http://startyourtab.com/" target="_blank"><h2 class="section-heading"><h2 class="section-heading">Wordpress Blog</h2></a>
-                    <p class="lead">
-                      Financial advice geared towards millennials. Responsive and SEO optimized
-                    </p>
+                    <a href="http://esimonian.github.io/js-spotify-api-ajax-v-000/" target="_blank"><h2 class="section-heading">Artists Top Tracks</h2></a>
+                    <p class="lead">Utilizes Spotify API </p>
                 </div>
                 <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/startYourTab.png" alt="">
+                    <img class="img-responsive" src="img/spotify_app_android.jpg" alt="">
                 </div>
             </div>
 
@@ -149,13 +147,13 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <a href="http://www.lastudiomaps.com/" target="_blank"><h2 class="section-heading">LA Studio Maps</h2></a>
+                    <a href="http://startyourtab.com/" target="_blank"><h2 class="section-heading"><h2 class="section-heading">Wordpress Blog</h2></a>
                     <p class="lead">
-                      Detailed map of major studios in the LA area
+                      Financial advice geared towards millennials. Responsive and SEO optimized
                     </p>
                 </div>
                 <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/LAstudios.jpg" alt="">
+                    <img class="img-responsive" src="img/startYourTab.png" alt="">
                 </div>
             </div>
 
@@ -164,6 +162,30 @@
 
     </div>
     <!-- /.content-section-a -->
+
+    <div class="content-section-b">
+
+        <div class="container">
+
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="http://www.lastudiomaps.com/" target="_blank"><h2 class="section-heading">LA Studio Maps</h2></a>
+                    <p class="lead">
+                      Detailed map of major studios in the LA area
+                    </p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/LAstudios.jpg" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
 
 	<a  name="contact"></a>
     <div class="banner">
