add reddit clone

--- a/index.html
+++ b/index.html
@@ -97,6 +97,33 @@
 
 	<a  name="services"></a>
 
+    <div class="content-section-b">
+
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="https://bitbucket.org/esimonian/flapper_news" target="_blank"><h2 class="section-heading">Reddit Clone</h2></a>
+                    <p class="lead">
+                    <ul>
+                        <li>Built with MEAN stack</li>
+                        <li>Autheticates user</li>
+                        <li>Allows up voting and down voting</li>
+                        <li>Orders posts and comments by upvotes</li>
+                    </ul>
+                    </p>
+                </div>
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
+                    <img class="img-responsive" src="img/reddit2.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-b -->
     <div class="content-section-a">
 
         <div class="container">
