--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                                 <a href="https://github.com/esimonian" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                             </li>
                             <li>
-                                <a href="https://www.linkedin.com/in/elizabethsimonian" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                                <a href="http://www.upwork.com/o/profiles/users/_~0131feccde7cf03681/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-arrow-up fa-fw"></i> <span class="network-name">Upwork</span></a>
                             </li>
                         </ul>
                     </div>
@@ -234,7 +234,7 @@
                             <a href="https://github.com/esimonian" target="_blank"class="btn btn-default btn-lg"><i class="fa fa-github fa-fw"></i> <span class="network-name">Github</span></a>
                         </li>
                         <li>
-                            <a href="https://www.linkedin.com/in/elizabethsimonian" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-linkedin fa-fw"></i> <span class="network-name">Linkedin</span></a>
+                            <a href="http://www.upwork.com/o/profiles/users/_~0131feccde7cf03681/" target="_blank" class="btn btn-default btn-lg"><i class="fa fa-arrow-up fa-fw"></i> <span class="network-name">Upwork</span></a>
                         </li>
                     </ul>
                 </div>
