--- a/index.html
+++ b/index.html
@@ -10,16 +10,16 @@
     <meta name="author" content="">
 
     <title>Elizabeth Simonian Portfolio</title>
-
-    <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <script>
+        function loadCSS(href,before,media){"use strict";var ss=window.document.createElement("link");var ref=before||window.document.getElementsByTagName("script")[0];var sheets=window.document.styleSheets;ss.rel="stylesheet";ss.href=href;ss.media="only x";ref.parentNode.insertBefore(ss,ref);ss.onloadcssdefined=function(cb){var defined;for(var i=0;i<sheets.length;i++){if(sheets[i].href&&sheets[i].href===ss.href){defined=true}}if(defined){cb()}else{setTimeout(function(){ss.onloadcssdefined(cb)})}};ss.onloadcssdefined(function(){ss.media=media||"all"});return ss}
+        loadCSS('http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic');
+        loadCSS('/font-awesome/css/font-awesome.min.css');
+        loadCSS('/css/dark.css');
+        loadCSS('https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css');
+      </script>
 
     <!-- Custom CSS -->
     <link href="css/landing-page.css" rel="stylesheet">
-
-    <!-- Custom Fonts -->
-    <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-    <link href="http://fonts.googleapis.com/css?family=Lato:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
 
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -96,6 +96,33 @@
     <!-- Page Content -->
 
 	<a  name="services"></a>
+
+    <div class="content-section-a">
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-5 col-sm-6">
+                    <hr class="section-heading-spacer">
+                    <div class="clearfix"></div>
+                    <a href="http://www.aure.com" target="_blank"><h2 class="section-heading">Portfolio Site</h2></a>
+                    <p class="lead">
+                        <ul>
+                            <li>Built with Jekyll</li>
+                            <li>Uses several custom ruby plugins to sort and display music files</li>
+                            <li><a href="https://github.com/aure/aure.github.io">Source code here</a></li>
+                        </ul>
+                    </p>
+
+                </div>
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
+                    <img class="img-responsive" src="img/aure.png" alt="">
+                </div>
+            </div>
+
+        </div>
+        <!-- /.container -->
+
+    </div>
+    <!-- /.content-section-a -->
 
     <div class="content-section-b">
 
